<resources>
    <string name="app_name">Desafio Integrador 3</string>

    <!--LOGIN ACTIVITY-->
    <string name="welcome">Welcome to the Marvel HQ\'s</string>
    <string name="name">Digite seu nome</string>
    <string name="email">Digite seu email</string>
    <string name="senha">Digite sua senha</string>
    <string name="checkbox">Remember</string>
    <string name="login">Login</string>
    <string name="create">Create account</string>

    <!--LOGIN ACTIVITY-->
    <string name="title">Register</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>